# matstruct-lab

./: .gitignore  README.md  environment.yml  pyproject.toml
examples/structures/: Au_111.cif  Au_111.vasp  Au_111.xyz  MoS2.cif  MoS2.vasp  MoS2.xyz  Ti_0001.cif  Ti_0001.vasp  Ti_0001.xyz
notebooks/: ase_pmg_tutorials.ipynb  au111_mos2_shared_strain.cif  au111_mos2_shared_strain.vasp  au111_strained_to_mos2.cif  au111_strained_to_mos2.vasp  het_con_2.ipynb  heterostructure_constructor.ipynb  mos2_strained_to_au111.cif  mos2_strained_to_au111.vasp
notebooks/05_2026/: unique_targets_strain_targeted_summary.json
notebooks/strain_targeted_metal_mos2_sandwiches/: Ag_MoS2_Ag_metal_target_4p495pct_alphanone_d2p500A_41atoms_M4p495pct_MoS20p201pct.cif  Ag_MoS2_Ag_metal_target_4p495pct_alphanone_d2p500A_41atoms_M4p495pct_MoS20p201pct.vasp  Ag_MoS2_Ag_metal_target_4p495pct_alphanone_d2p500A_41atoms_M4p495pct_MoS20p201pct.xyz  Ag_MoS2_Ag_metal_target_4p495pct_alphanone_d2p750A_41atoms_M4p495pct_MoS20p201pct.cif  Ag_MoS2_Ag_metal_target_4p495pct_alphanone_d2p750A_41atoms_M4p495pct_MoS20p201pct.vasp  Ag_MoS2_Ag_metal_target_4p495pct_alphanone_d2p750A_41atoms_M4p495pct_MoS20p201pct.xyz  Ag_MoS2_Ag_metal_target_4p495pct_alphanone_d3p000A_41atoms_M4p495pct_MoS20p201pct.cif  Ag_MoS2_Ag_metal_target_4p495pct_alphanone_d3p000A_41atoms_M4p495pct_MoS20p201pct.vasp  Ag_MoS2_Ag_metal_target_4p495pct_alphanone_d3p000A_41atoms_M4p495pct_MoS20p201pct.xyz  Ag_MoS2_Ag_metal_target_4p495pct_alphanone_d3p250A_41atoms_M4p495pct_MoS20p201pct.cif  (+623 more)
src/matstruct_lab/: README.md  __init__.py  (+11 more)
